# TalkHub

./: .env  Cargo.toml  README.md  diesel.toml
crates/api/: Cargo.toml
crates/api/src/: api_route_http.rs  context.rs  lib.rs
crates/api/src/channel/: controller.rs  mod.rs  route.rs
crates/api/src/channel/controller/: create_channel.rs  delete_channel.rs  get_channel.rs  get_channels.rs  mod.rs  update_channel.rs
crates/api/src/channel/data/: request.rs  response.rs
crates/api/src/common/: api_result.rs  mod.rs
crates/api/src/common/error/: error_code.rs  error_response.rs  mod.rs  status_code.rs
crates/api/src/common/view_model/: channel_view.rs  datetime_view.rs  mod.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs  migration.rs  schema.rs  utils.rs
crates/database/src/dao/: channel_dao.rs  mod.rs
crates/database/src/entity/: channel_entity.rs  message_entity.rs  mod.rs
crates/database/src/error/: diesel_error.rs  mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  error_type.rs  lib.rs  result.rs
crates/domain/src/crates/: channel_operation.rs  mod.rs
crates/domain/src/errors/: error.rs  error_type.rs  mod.rs
crates/domain/src/errors/channel/: channel_error_context.rs  mod.rs
crates/domain/src/errors/message/: message_error_context.rs  mod.rs
crates/domain/src/input_data/: channel_operation.rs  message_operation.rs  mod.rs
crates/domain/src/usecase/channel/: create_channel_usecase.rs  delete_channel_usecase.rs  get_channel_usecase.rs  get_channels_usecase.rs  mod.rs  update_channel_usecase.rs
crates/model/: Cargo.toml
crates/model/src/: channel.rs  lib.rs  message.rs
crates/repository/: Cargo.toml
crates/repository/src/: channel_repository.rs  lib.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs
docker/: Dockerfile  Dockerfile_database  docker-compose.yml
migrations/2024-06-05-135452_diesel_inital_setup/: down.sql  up.sql
migrations/2024-06-05-141105_diesel_inital_setup/: up.sql
migrations/2024-06-05-142021_diesel_inital_setup/: up.sql
src/: config.rs  lib.rs  main.rs
