[workspace.package]
version = "0.1.0"
edition = "2021"
description = "A simple chat application"
repository = "https://github.com/shunm-999/TalkHub"

[package]
name = "talk_hub"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
publish = false

[workspace]
members = [
    "crates/api",
    "crates/database",
    "crates/domain",
    "crates/model",
    "crates/repository",
    "crates/util"
]

[workspace.dependencies]
talk_hub_api = { path = "./crates/api" }
talk_hub_database = { path = "./crates/database" }
talk_hub_domain = { path = "./crates/domain" }
talk_hub_model = { path = "./crates/model" }
talk_hub_repository = { path = "./crates/repository" }
talk_hub_util = { path = "./crates/util" }
diesel = "2.1.6"
diesel_migrations = "2.1.0"
diesel-async = "0.4.1"
diesel-derive-newtype = "2.1.2"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_with = "3.8.1"
serde_json = { version = "1.0.117", features = ["preserve_order"] }
actix-web = { version = "4.6.0", default-features = false, features = [
    "macros",
    "rustls-0_23",
    "compress-brotli",
    "compress-gzip",
    "compress-zstd",
    "cookies",
] }
tracing = "0.1.40"
tracing-actix-web = { version = "0.7.10", default-features = false }
tracing-error = "0.2.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.24.0" }
opentelemetry = { version = "0.23.0" }
url = { version = "2.5.0", features = ["serde"] }
reqwest = { version = "0.12.4", features = ["json", "blocking", "gzip"] }
reqwest-middleware = "0.3.1"
reqwest-tracing = "0.5.0"
clokwerk = "0.4.0"
doku = { version = "0.21.1", features = ["url-2"] }
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"], default-features = false }
base64 = "0.22.1"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
async-trait = "0.1.80"
anyhow = { version = "1.0.86", features = [
    "backtrace",
] } #
diesel_ltree = "0.3.1"
typed-builder = "0.18.2"
serial_test = "3.1.1"
regex = "1.10.4"
once_cell = "1.19.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = "0.7.10"
tokio-postgres-rustls = "0.12.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
pretty_assertions = "1.4.0"

[dependencies]
talk_hub_api = { workspace = true }
talk_hub_database = { workspace = true }
talk_hub_domain = { workspace = true }
talk_hub_model = { workspace = true }
talk_hub_repository = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
actix-web = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-error = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-tracing = { workspace = true }
clokwerk = { workspace = true }
serde_json = { workspace = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
console-subscriber = { version = "0.1.10", optional = true }
opentelemetry-otlp = { version = "0.12.0", optional = true }
pict-rs = { version = "0.5.14", optional = true }
tokio.workspace = true
actix-cors = "0.7.0"
chrono = { workspace = true }
prometheus = { version = "0.13.4", features = ["process"] }
clap = { workspace = true }
actix-web-prom = "0.8.0"
anyhow = { workspace = true }
