[package]
name = "talk_hub_api"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
talk_hub_model = { workspace = true }
talk_hub_domain = { workspace = true }
talk_hub_repository = { workspace = true }
bcrypt = { workspace = true }
actix-web = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
actix-web-httpauth = "0.8.1"
serde = { version = "1.0.202", features = ["derive"] }
serde_with = "3.8.1"
serde_json = { version = "1.0.117", features = ["preserve_order"] }
